refactors data structs namespace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,9 +52,9 @@ add_executable(drone_flight_visualizer
         ${source_DIR}/main.cpp
         ${source_DIR}/vulkan/context.cpp
         ${source_DIR}/vulkan/renderer.cpp
-        ${source_DIR}/utils/dataReader.cpp
-        src/objects/world_object.h
-        src/objects/drone_object.h
+        ${source_DIR}/utils/data_reader.cpp
+        ${source_DIR}/objects/world_object.h
+        ${source_DIR}/objects/drone_object.h
 )
 target_include_directories(drone_flight_visualizer PRIVATE ${source_DIR})
 
