Add initial pipeline rendering code
This commit implements half of Chapter 2 of vkguide.dev, up to basic red triangle rendering.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 # Build the executable
 add_executable(drone_flight_visualizer
         main.cpp
-        vulkan/vk_initializers.cpp
         vulkan/vk_engine.cpp
+        vulkan/vk_initializers.cpp
+        vulkan/vk_pipeline.cpp
         utils/data_reader.cpp
         objects/world_object.h
         objects/drone_object.h
