Implement proper object cleanup with a deletion queue
This commit implements up to Chapter 2 of vkguide.dev

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,8 @@ add_executable(drone_flight_visualizer
         utils/data_reader.cpp
         objects/world_object.h
         objects/drone_object.h
+        vulkan/deletion_queue.cpp
+        vulkan/deletion_queue.h
 )
 target_include_directories(drone_flight_visualizer PRIVATE ".")
 
