Downgrade VMA to 2.3.0
VMA is broken on drivers that don't support Vulkan 1.3, even though it is set to use 1.1. No matter what, it tries to dynamically link to `vkGetDeviceMemoryBufferRequirements` and fails miserably on devices with no Vulkan 1.3 support. Generally this can be worked around by updating the GPU driver, but that's not always an option for older GPUs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,8 +52,8 @@ find_package(Vulkan REQUIRED)
 include_directories(SYSTEM ${Vulkan_INCLUDE_DIRS})
 
 # Vulkan Memory Allocator
-CPMAddPackage("gh:GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator@3.0.1")
-include_directories(SYSTEM ${VulkanMemoryAllocator_SOURCE_DIR}/include)
+CPMAddPackage("gh:GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator@2.3.0")
+include_directories(SYSTEM ${VulkanMemoryAllocator_SOURCE_DIR}/src)
 
 # tinyobjloader: OBJ file loading
 CPMAddPackage("gh:tinyobjloader/tinyobjloader@1.0.6")
