Introduce a new entrypoint and move to single thread render loop
The new entrypoint makes use of the Visualizer class to setup the scene and start up the visualization. The usual monkey example is currently loaded at startup.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(drone_flight_visualizer
         map/data_reader.cpp
         map/data_fetcher.cpp
         objects/drone.cpp
+        drone_entrypoint.cpp
 )
 
 target_include_directories(drone_flight_visualizer PRIVATE ".")
