Move StbImageLoader to utils

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,9 @@ set(DFV_SOURCE_COMMON
         vulkan/vk_pipeline.cpp
         vulkan/deletion_queue.cpp
         vulkan/vk_mesh.cpp
-        vulkan/vk_texture.cpp
         vulkan/vk_engine_utils.cpp
         vulkan/vk_engine_init.cpp
+        utils/stb_image_loader.cpp
 )
 
 set(DFV_SOURCE_MAP
